unpackaged/config/ofm/objects/Budget_Category__c/Budget_Category__c.object-meta.xml
<CustomObject>
    <description>Universal Budget grid row: one spending category on a budget.</description>
    <label>Budget Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>