unpackaged/config/ofm/objects/Budget_Category__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Budget Categories</relationshipLabel>
    <relationshipName>Budget_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
    <type>MasterDetail</type>
    <description>Parent budget this category belongs to; the Universal Budget grid groups categories under it.</description>
    <inlineHelpText>The budget this category belongs to.</inlineHelpText>
</CustomField>