unpackaged/config/ofm/objects/Budget_Category__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
    <description>Admin-facing description surfaced in the Universal Budget grid's category detail popover.</description>
    <inlineHelpText>Shown when a user opens this category's details from the budget grid.</inlineHelpText>
</CustomField>