unpackaged/config/ofm/objects/Budget_Category__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Last date this category is active; the Universal Budget grid shows the range as an informational row in the category details.</description>
    <inlineHelpText>When this category stops being active.</inlineHelpText>
</CustomField>