unpackaged/config/ofm/objects/Budget_Category__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
    <description>SLDS icon shown beside this category in the Universal Budget grid, in group:name form (e.g. utility:trucks). Blank falls back to the grid default.</description>
    <inlineHelpText>SLDS icon name like utility:trucks. Leave blank for the default money bag.</inlineHelpText>
</CustomField>