unpackaged/config/ofm/objects/Budget_Category__c/fields/Line_Item_Mode__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Mode__c</fullName>
    <label>Line Item Mode</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>When checked, the Universal Budget grid shows named line-item rows within this category instead of a single row.</description>
    <inlineHelpText>Check to budget this category as multiple named line items.</inlineHelpText>
</CustomField>