unpackaged/config/ofm/objects/Budget_Category__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <label>Maximum Quantity</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Cap on the count for Quantity-mode categories; the Universal Budget grid flags counts over the cap. 0 means no limit.</description>
    <inlineHelpText>Largest allowed count (Quantity mode). 0 = no limit.</inlineHelpText>
</CustomField>