unpackaged/config/ofm/objects/Budget_Category__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum total this category must request; the Universal Budget grid flags the category until the minimum is met. 0 means no minimum.</description>
    <inlineHelpText>Smallest allowed total for this category. 0 = no minimum.</inlineHelpText>
</CustomField>