unpackaged/config/ofm/objects/Budget_Category__c/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <label>Minimum Quantity</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Minimum count for Quantity-mode categories; the Universal Budget grid flags the category until met. 0 means no minimum.</description>
    <inlineHelpText>Smallest allowed count (Quantity mode). 0 = no minimum.</inlineHelpText>
</CustomField>