unpackaged/config/ofm/objects/Budget_Category__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
    <description>Value mode for this category in the Universal Budget grid: Currency (default) tracks money via Amount; Quantity tracks counts; Percent tracks percentages with a hard 100% cap per row.</description>
    <inlineHelpText>How this category's values behave: Currency (money), Quantity (counts), or Percent (0-100 per row).</inlineHelpText>
</CustomField>