unpackaged/config/ofm/objects/Budget_Category__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Display position of this category in the Universal Budget grid (numeric; the grid renumbers to gapless 1..N on insert and sort changes).</description>
    <inlineHelpText>Row order in the budget grid. Lower numbers appear first.</inlineHelpText>
</CustomField>