unpackaged/config/ofm/objects/Budget_Category__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>First date this category is active; the Universal Budget grid shows the range as an informational row in the category details.</description>
    <inlineHelpText>When this category becomes active.</inlineHelpText>
</CustomField>